After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770938 - When wifi activated NM connects to shared network without scanning for other networks
When wifi activated NM connects to shared network without scanning for other ...
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-09-06 11:05 UTC by Simone Gaiarin
Modified: 2017-06-16 09:57 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Simone Gaiarin 2016-09-06 11:05:00 UTC
When I turn the WiFi on, NM has a delay in scanning the available WiFi network, and at the beginning it only shows "local" networks (Shared networks, VPN). If one of this local networks is set to autoconnect, NM connects to it and doesn't perform the scan of the available WiFi networks.
This causes two problems:
- autoconnect priorities are ignored
- to connect to another network, it's necessary to manually disconnect from the current network, perform a scan of the available Wifi networks and manually connect to one of them

Scenario:
SH1 shared Wifi network (autoconnect.priority 0) 
AP1 AP wifi network (autoconnect.priority 10)

Steps:
- Turn on Wifi

Result:
- NM connects to SH1
- NM doesn't perform the scan of the available WiFi networks, so that they are not listed
- AP1 priority has been ignored

Expected results:
- NM perform the scan of available WiFi networks
- NM connects to AP1 (highest priority available)
- The list of WiFi network is shown so that it's possible to manually select another network
Comment 1 Simone Gaiarin 2016-09-06 11:06:01 UTC
I've forget to say that I'm using KDE with plasma-nm as a NM client.
Comment 3 Beniamino Galvani 2017-02-17 16:57:34 UTC
(In reply to Thomas Haller from comment #2)
> branch for review:
> https://cgit.freedesktop.org/NetworkManager/NetworkManager/log/?h=th/device-
> wifi-wait-for-scan-bgo770938

LGTM
Comment 5 Simone Gaiarin 2017-02-17 23:21:17 UTC
Thanks! Can't wait to try this.
Comment 6 Simone Gaiarin 2017-06-15 09:11:08 UTC
This bug is still present in networkmanager 1.8 using plasma-nm 5.10.1.
If I'm not wrong that merge should be part of networkmanager 1.8, in this case the bug is not solved.
Comment 7 Thomas Haller 2017-06-15 10:08:44 UTC
Yes, fe6204ffc71f62c1667d0eba56f3a22d6aa9bbbd is part of 1.8.

If you experience a similar issue (be it the same cause, or just the same symptoms), you have to open a new bug and provide information on how to debug it.  Especially that involves full logfiles with level=TRACE. See https://cgit.freedesktop.org/NetworkManager/NetworkManager/plain/contrib/fedora/rpm/NetworkManager.conf?id=master

Thanks.
Comment 8 Thomas Haller 2017-06-15 10:11:50 UTC
I missed that you are the original reporter :)

In this case, please reopen the bug. But it still needs new information for debugging the issue (that is, the logfile and a fresh description of what you are doing precisely).
Comment 9 Simone Gaiarin 2017-06-16 09:57:52 UTC
I've tried to reproduce it now, but I can't. Strangly I'm in the exact same condition where the bug appeared yesterday. So it seems to work. If it happens again I'll try to grab the log and I'll reopen the bug. Thank you.